iOS bug fixing
- fixed bug where photo credits would glitch if too long
- fixed deformed tooltip button
- fixed bug where tooltip button would move away when pressed
- fixed too much margin in bottom settings

- interface footer now has less padding on mobile

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -88,26 +88,33 @@
 
 		.signature {
 			padding: 3em;
-			padding-bottom: 9em;
+			padding-bottom: 4em;
 		}
 	}
 
 	footer {
 		position: relative;
+		padding: 0 14px 14px;
 
-		#credit {
-			display: flex;
+		#creditContainer {
 			width: calc(100% - 7.5em);
-			line-height: 14px;
-			a,
-			p,
-			span {
-				font-size: 11px;
-			}
-		}
+			display: flex;
+			align-items: center;
 
-		.exif {
-			display: none;
+			#credit {
+				display: block;
+				line-height: 14px;
+				
+				a,
+				p,
+				span {
+					font-size: 11px;
+				}
+			}
+	
+			.exif {
+				display: none;
+			}
 		}
 	}
 
